# penguin_framework

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeDarwinPresets.json  CMakeGenericPresets.json  CMakeLinuxPresets.json  CMakeWindowsPresets.json  penguin_framework-config.cmake.in
include/penguin_framework/: entry_point.hpp  penguin.hpp  penguin_init.hpp
include/penguin_framework/common/: errors.hpp  exception.hpp  native_types.hpp
include/penguin_framework/core/common/: errors.hpp  exception.hpp  native_types.hpp
include/penguin_framework/core/events/: pf_event.hpp  pf_windowevent.hpp
include/penguin_framework/core/input/: input.hpp  pf_input.hpp
include/penguin_framework/core/math/: circle2.hpp  colour.hpp  colours.hpp  math_compat.hpp  math_funcs.hpp  math_types.hpp  rect2.hpp  rect2i.hpp  vector2.hpp  vector2i.hpp
include/penguin_framework/core/rendering/: penguin_renderer.hpp  penguin_renderer_impl.hpp  penguin_sprite.hpp  penguin_sprite_impl.hpp
include/penguin_framework/core/system/: penguin_graphics_system.hpp
include/penguin_framework/core/utils/: string.hpp
include/penguin_framework/core/window/: penguin_window.hpp  penguin_window_impl.hpp  penguin_windowflags.hpp  pf_window.hpp  pf_windowflags.hpp  window.hpp  windowflags.hpp
include/penguin_framework/events/: event.hpp  event_type.hpp  events.hpp  input_event.hpp  input_event_type.hpp
include/penguin_framework/input/: input.hpp
include/penguin_framework/input/keyboard/: key.hpp  keyboard.hpp  keyboard_keys.hpp  keymod.hpp  scan.hpp
include/penguin_framework/input/mouse/: mouse_button.hpp  mouse_wheel.hpp
include/penguin_framework/logger/: log_level.hpp  logger.hpp
include/penguin_framework/math/: circle2.hpp  colour.hpp  colours.hpp  math_funcs.hpp  math_types.hpp  rect2.hpp  rect2i.hpp  vector2.hpp  vector2i.hpp
include/penguin_framework/rendering/: penguin_renderer.hpp  renderer.hpp
include/penguin_framework/rendering/drawables/: sprite.hpp  text.hpp
include/penguin_framework/rendering/primitives/: flip_modes.hpp  font.hpp  font_style.hpp  penguin_sprite.hpp  penguin_texture.hpp  sprite.hpp  texture.hpp
include/penguin_framework/rendering/systems/: asset_manager.hpp  font_loader.hpp  penguin_asset_manager.hpp  penguin_texture_loader.hpp  text_context.hpp  texture_loader.hpp
include/penguin_framework/timer/: timer.hpp
include/penguin_framework/utils/: errors.hpp  exception.hpp  string.hpp
include/penguin_framework/window/: penguin_window.hpp  penguin_windowflags.hpp  window.hpp  windowflags.hpp
src/: penguin_main.cpp
src/core/: penguin_graphics_system.cpp
src/core/events/: event.cpp  pf_event.cpp  pf_windowevent.cpp  windowevent.cpp
src/core/input/: pf_input.cpp
src/core/input/keyboard/: keyboard.cpp
src/core/math/: circle2.cpp  colour.cpp  rect2.cpp  vector2.cpp  vector2i.cpp
src/core/renderer/: penguin_renderer.cpp
src/core/renderer/assets/: penguin_asset_loader.cpp  penguin_texture.cpp
src/core/rendering/: penguin_renderer.cpp
src/core/rendering/primitives/: penguin_sprite.cpp  penguin_texture.cpp
src/core/rendering/systems/: penguin_asset_manager.cpp  penguin_texture_loader.cpp
src/core/system/: penguin_graphics_system.cpp
src/core/utils/: string.cpp
src/core/window/: penguin_window.cpp  pf_window.cpp  window.cpp
src/error/internal/: internal_error.hpp
src/events/: event.cpp  input_event.cpp
src/events/internal/: event_impl.hpp  events_impl.cpp  events_impl.hpp  input_event_impl.cpp  input_event_impl.hpp
src/input/: input.cpp
src/input/internal/: input_impl.cpp  input_impl.hpp  key_to_scan.hpp
src/internal/: penguin_init.cpp
src/logger/: logger.cpp
src/logger/internal/: logger_impl.cpp  logger_impl.hpp
src/math/: circle2.cpp  colour.cpp  rect2.cpp  rect2i.cpp  vector2.cpp  vector2i.cpp
src/rendering/: penguin_renderer.cpp  renderer.cpp
src/rendering/drawables/: sprite.cpp  text.cpp
src/rendering/drawables/internal/: sprite_impl.cpp  sprite_impl.hpp  text_impl.cpp  text_impl.hpp
src/rendering/internal/: penguin_renderer_impl.cpp  penguin_renderer_impl.hpp  renderer_impl.cpp  renderer_impl.hpp
src/rendering/primitives/: font.cpp  penguin_sprite.cpp  penguin_texture.cpp  sprite.cpp  texture.cpp
src/rendering/primitives/internal/: font_impl.cpp  font_impl.hpp  penguin_sprite_impl.cpp  penguin_sprite_impl.hpp  penguin_texture_impl.cpp  penguin_texture_impl.hpp  sprite_impl.cpp  sprite_impl.hpp  texture_impl.cpp  texture_impl.hpp
src/rendering/systems/: asset_manager.cpp  font_loader.cpp  penguin_asset_manager.cpp  penguin_texture_loader.cpp  text_context.cpp  texture_loader.cpp
src/rendering/systems/internal/: asset_manager_impl.cpp  asset_manager_impl.hpp  font_loader_impl.cpp  font_loader_impl.hpp  penguin_asset_manager_impl.cpp  penguin_asset_manager_impl.hpp  penguin_texture_loader_impl.cpp  penguin_texture_loader_impl.hpp  text_context_impl.cpp  text_context_impl.hpp  texture_loader_impl.cpp  (+1 more)
src/utils/: string.cpp
src/window/: penguin_window.cpp  window.cpp
src/window/internal/: penguin_window_impl.cpp  penguin_window_impl.hpp  window_impl.cpp  window_impl.hpp
tests/: CMakeLists.txt  test_colour.hpp  test_vector2.hpp  test_vector2i.hpp
tests/cmake/: TestHelpers.cmake
tests/common/: test_helpers.hpp
tests/math/: CMakeLists.txt  test_circle2.cpp  test_colour.cpp  test_rect2.cpp  test_rect2i.cpp  test_vector2.cpp  test_vector2i.cpp
tests/rendering/: CMakeLists.txt  test_penguin_renderer.cpp  test_renderer.cpp
tests/rendering/drawables/: CMakeLists.txt  test_sprite.cpp  test_text.cpp
tests/rendering/primitives/: CMakeLists.txt  test_font.cpp  test_penguin_sprite.cpp  test_penguin_texture.cpp  test_sprite.cpp  test_texture.cpp
tests/rendering/systems/: CMakeLists.txt  test_asset_manager.cpp  test_font_loader.cpp  test_penguin_asset_manager.cpp  test_penguin_texture_loader.cpp  test_texture_loader.cpp
tests/utils/: CMakeLists.txt  test_string.cpp
tests/window/: CMakeLists.txt  test_penguin_window.cpp  test_penguin_windowflags.cpp  test_window.cpp  test_windowflags.cpp
(+15 files in other folders)
